test/scc/type/semantic-errors/002.a
002.t:7:13: error: size of array must be greater than zero